# UdemyCmake

./: .gitmodules
2_CMake/00_MyProject/: CMakeLists.txt  Makefile
2_CMake/00_MyProject/app/: CMakeLists.txt  main.cc
2_CMake/00_MyProject/cmake/: AddGitSubmodule.cmake
2_CMake/00_MyProject/configured/: config.hpp.in
2_CMake/00_MyProject/src/my_lib/: CMakeLists.txt  my_lib.cc
